tests/rosetta/out/Rust/24-game.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/24_game.rs:9:16
  |
8 |     let randDigit = move || -> i32 {
  |                                --- expected `i32` because of return type
9 |         return (_now() % 9) + 1;
  |                ^^^^^^^^^^^^^^^^ expected `i32`, found `i64`
  |
help: you can convert an `i64` to an `i32` and panic if the converted value doesn't fit
  |
9 |         return ((_now() % 9) + 1).try_into().unwrap();
  |                +                +++++++++++++++++++++

error[E0425]: cannot find function `input` in this scope
  --> /tmp/24_game.rs:23:24
   |
23 |         let mut expr = input();
   |                        ^^^^^ not found in this scope

error[E0425]: cannot find function `int` in this scope
  --> /tmp/24_game.rs:39:47
   |
39 |                 while digits[(j) as usize] != int(ch) - int(String::from("0")) {
   |                                               ^^^ not found in this scope

error[E0425]: cannot find function `int` in this scope
  --> /tmp/24_game.rs:39:57
   |
39 |                 while digits[(j) as usize] != int(ch) - int(String::from("0")) {
   |                                                         ^^^ not found in this scope

error[E0369]: cannot add `Vec<i32>` to `Vec<i32>`
  --> /tmp/24_game.rs:46:70
   |
46 |                 digits = digits[(0) as usize..(j) as usize].to_vec() + digits[(j + 1) as usize..(digits.len()) as usize].to_vec();
   |                          ------------------------------------------- ^ ---------------------------------------------------------- Vec<i32>
   |                          |
   |                          Vec<i32>
   |
note: the foreign item type `Vec<i32>` doesn't implement `Add`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:409:1
   |
   = note: not implement `Add`

error[E0425]: cannot find function `int` in this scope
  --> /tmp/24_game.rs:47:71
   |
47 |                 stack = { let mut tmp = stack.clone(); tmp.push(float(int(ch) - int(String::from("0")))); tmp };
   |                                                                       ^^^ not found in this scope

error[E0425]: cannot find function `int` in this scope
  --> /tmp/24_game.rs:47:81
   |
47 |                 stack = { let mut tmp = stack.clone(); tmp.push(float(int(ch) - int(String::from("0")))); tmp };
   |                                                                                 ^^^ not found in this scope

error[E0425]: cannot find function `float` in this scope
  --> /tmp/24_game.rs:47:65
   |
47 |                 stack = { let mut tmp = stack.clone(); tmp.push(float(int(ch) - int(String::from("0")))); tmp };
   |                                                                 ^^^^^ not found in this scope

error[E0425]: cannot find function `abs` in this scope
  --> /tmp/24_game.rs:64:16
   |
64 |             if abs(stack[0] - 24.0) > 1e-06 {
   |                ^^^ not found in this scope

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0308, E0369, E0425.
For more information about an error, try `rustc --explain E0308`.
